# MeshLab_Nagi

./: build_script.bat  build_script.ps1  simple_build.cmd
build_m2_test/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  muparser-targets.cmake  muparser.pc
src/: CMakeLists.txt
src/cmake/: meshlab_global_settings.cmake
src/common/parameters/: rich_parameter_list.cpp  rich_parameter_list.h
src/common_gui/rich_parameter/: rich_parameter_list_frame.cpp
src/meshlabplugins/filter_custom/: CMakeLists.txt  filter_custom.cpp  filter_custom.h
src/meshlabplugins/filter_normal_enhance/: CMakeLists.txt  filter_normal_enhance.cpp  filter_normal_enhance.h
src/meshlabplugins/io_base/: baseio.cpp
unsupported/plugins_unsupported/filter_normal_enhance/: filter_normal_enhance.cpp  filter_normal_enhance.h
